Fixed bug for selection label height misalignment

--- a/src/components/Buttons/SelectButton/SelectButton.scss
+++ b/src/components/Buttons/SelectButton/SelectButton.scss
@@ -14,7 +14,7 @@
   display: inline-block;
   vertical-align: top;
   padding: 0 10px;
-  height: 37px;
+  height: 39px;
   line-height: 37px;
   width: 100%;
   background-color: #ddd;
